<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/main_image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/main_image_logo"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_textview_recent_playing_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_textview_recent_play_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/main_textview_recent_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_textview_recent_artist"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/main_textview_recent_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_textview_recent_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/main_textview_recent_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_textview_recent_album"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <Button
        android:id="@+id/main_button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_edittext_preview"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/main_edittext_preview"
        android:text="@string/main_button_go_to_about" />

    <Button
        android:id="@+id/main_button_nowplaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button_about"
        android:layout_alignLeft="@+id/main_button_about"
        android:layout_alignRight="@+id/main_edittext_preview"
        android:text="@string/main_button_share_this_song" />

    <EditText
        android:id="@+id/main_edittext_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button_nowplaying"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_edittext_preview"
        android:layout_alignLeft="@+id/main_edittext_preview"
        android:layout_alignRight="@+id/main_edittext_preview" >

        <TextView
            android:id="@+id/main_textview_preview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_textview_preview_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/main_textview_preview_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowplaying_length_format"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</RelativeLayout>